# LEDyRochen

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
src/: constants.hpp  device.cpp  device.hpp  main.cpp  pack.cpp  pack.hpp  protocol.cpp  protocol.hpp  truetype.cpp  truetype.hpp  types.hpp  utils.cpp  utils.hpp  vendor_font.cpp  vendor_font.hpp
tests/: tests.cpp
udev/: 70-ledyrochen.rules
